[tool.poetry]
name = "action-test"
version = "v0.1.11-dev"
description = ""
authors = ["Mark Marryatt <awsumtoast@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bump-my-version = "^0.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.bumpversion]
current_version = "v0.1.11-dev"
parse = """(?x)
    (?P<major>0|[1-9]\\d*)\\.
    (?P<minor>0|[1-9]\\d*)\\.
    (?P<patch>0|[1-9]\\d*)
    (?:
        -                             # dash separator for pre-release section
        (?P<pre_l>[a-zA-Z-]+)         # pre-release label
    )?                                # pre-release section is optional
"""
serialize = [
    "v{major}.{minor}.{patch}-{pre_l}",
    "v{major}.{minor}.{patch}"
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "{new_version}"
tag_message = "Bump version: {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {new_version}"
commit_args = ""

[tool.bumpversion.parts.pre_l]
values = ["dev", "final"]
optional_value = "final"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "^version = \"{current_version}\""
replace = "version = \"{new_version}\""
regex = true
